--- a/paper/references.bib
+++ b/paper/references.bib
@@ -94,6 +94,8 @@
     pages = {1–26},
   }
   
+
+  
 @Manual{citestagazer,
     title = {{stargazer}: Well-Formatted Regression and Summary Statistics Tables},
     author = {Marek Hlavac},
@@ -111,6 +113,17 @@
   url = {https://yihui.org/knitr/},
   note = {R package version 1.33}
 }
+
+@Article{citeglmnet,
+    title = {Elastic Net Regularization Paths for All Generalized Linear Models},
+    author = {J. Kenneth Tay and Balasubramanian Narasimhan and Trevor Hastie},
+    journal = {Journal of Statistical Software},
+    year = {2023},
+    volume = {106},
+    number = {1},
+    pages = {1--31},
+    doi = {10.18637/jss.v106.i01},
+  }
 
 @article{cleveland2009nonprofit,
   title={The nonprofit advantage: Producing quality in thick and thin child care markets},
