--- a/paper/references.bib
+++ b/paper/references.bib
@@ -17,14 +17,6 @@
     url = {https://CRAN.R-project.org/package=opendatatoronto},
   }
   
-  @misc{toronto2024licensed,
-  author       = {City of Toronto},
-  title        = {Licensed Child Care Centres Dataset},
-  year         = {2024},
-  url          = {https://open.toronto.ca/dataset/licensed-child-care-centres/},
-  note         = {Accessed: [Insert date of access]}
-}
-
   @book{tellingstories,
     title = {Telling Stories with Data},
     author = {Rohan Alexander},
@@ -94,8 +86,6 @@
     pages = {1–26},
   }
   
-
-  
 @Manual{citestagazer,
     title = {{stargazer}: Well-Formatted Regression and Summary Statistics Tables},
     author = {Marek Hlavac},
@@ -113,17 +103,6 @@
   url = {https://yihui.org/knitr/},
   note = {R package version 1.33}
 }
-
-@Article{citeglmnet,
-    title = {Elastic Net Regularization Paths for All Generalized Linear Models},
-    author = {J. Kenneth Tay and Balasubramanian Narasimhan and Trevor Hastie},
-    journal = {Journal of Statistical Software},
-    year = {2023},
-    volume = {106},
-    number = {1},
-    pages = {1--31},
-    doi = {10.18637/jss.v106.i01},
-  }
 
 @article{cleveland2009nonprofit,
   title={The nonprofit advantage: Producing quality in thick and thin child care markets},
@@ -374,3 +353,10 @@
   year={2003}
 }
 
+@Manual{citearrow,
+    title = {arrow: Integration to 'Apache' 'Arrow'},
+    author = {Neal Richardson and Ian Cook and Nic Crane and Dewey Dunnington and Romain François and Jonathan Keane and Dragoș Moldovan-Grünfeld and Jeroen Ooms and Jacob Wujciak-Jens and {Apache Arrow}},
+    year = {2024},
+    note = {R package version 17.0.0.1},
+    url = {https://CRAN.R-project.org/package=arrow},
+  }
