--- a/paper/references.bib
+++ b/paper/references.bib
@@ -16,6 +16,15 @@
     note = {R package version 0.1.5},
     url = {https://CRAN.R-project.org/package=opendatatoronto},
   }
+
+@misc{toronto2024licensed,
+  author = {{City of Toronto}},
+  title = {Licensed Child Care Centres Dataset},
+  year = {2024},
+  howpublished = {\url{https://open.toronto.ca/dataset/licensed-child-care-centres/}},
+  note = {Accessed: 2024-12-10}
+}
+
   
   @book{tellingstories,
     title = {Telling Stories with Data},
@@ -359,4 +368,135 @@
     year = {2024},
     note = {R package version 17.0.0.1},
     url = {https://CRAN.R-project.org/package=arrow},
+  }
+
+@book{anheier2005nonprofit,
+  title={Nonprofit Organizations: Theory, Management, Policy},
+  author={Anheier, Helmut K.},
+  year={2005},
+  publisher={Routledge}
+}
+
+@Manual{citebroom,
+    title = {broom: Convert Statistical Objects into Tidy Tibbles},
+    author = {David Robinson and Alex Hayes and Simon Couch},
+    year = {2024},
+    note = {R package version 1.0.7},
+    url = {https://CRAN.R-project.org/package=broom},
+  }
+
+@Manual{citeggcorrplot,
+    title = {ggcorrplot: Visualization of a Correlation Matrix using 'ggplot2'},
+    author = {Alboukadel Kassambara},
+    year = {2023},
+    note = {R package version 0.1.4.1},
+    url = {https://CRAN.R-project.org/package=ggcorrplot},
+  }
+  
+@Manual{citegt,
+    title = {gt: Easily Create Presentation-Ready Display Tables},
+    author = {Richard Iannone and Joe Cheng and Barret Schloerke and Ellis Hughes and Alexandra Lauer and JooYoung Seo and Ken Brevoort and Olivier Roy},
+    year = {2024},
+    note = {R package version 0.11.1},
+    url = {https://CRAN.R-project.org/package=gt},
+  }
+  
+@Manual{citehere,
+    title = {here: A Simpler Way to Find Your Files},
+    author = {Kirill Müller},
+    year = {2020},
+    note = {R package version 1.0.1},
+    url = {https://CRAN.R-project.org/package=here},
+  }
+  
+@Manual{citekableExtra,
+    title = {kableExtra: Construct Complex Table with 'kable' and Pipe Syntax},
+    author = {Hao Zhu},
+    year = {2024},
+    note = {R package version 1.4.0},
+    url = {https://CRAN.R-project.org/package=kableExtra},
+  }
+  
+@Article{citemodelsummary,
+    title = {{modelsummary}: Data and Model Summaries in {R}},
+    author = {Vincent Arel-Bundock},
+    journal = {Journal of Statistical Software},
+    year = {2022},
+    volume = {103},
+    number = {1},
+    pages = {1--23},
+    doi = {10.18637/jss.v103.i01},
+  }
+  
+@Article{citepROC,
+    title = {pROC: an open-source package for R and S+ to analyze and compare ROC curves},
+    author = {Xavier Robin and Natacha Turck and Alexandre Hainard and Natalia Tiberti and Frédérique Lisacek and Jean-Charles Sanchez and Markus Müller},
+    year = {2011},
+    journal = {BMC Bioinformatics},
+    volume = {12},
+    pages = {77},
+  }
+  
+@Manual{citestats,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2024},
+    url = {https://www.R-project.org/},
+  }
+  
+@Manual{citetidyr,
+    title = {tidyr: Tidy Messy Data},
+    author = {Hadley Wickham and Davis Vaughan and Maximilian Girlich},
+    year = {2024},
+    note = {R package version 1.3.1},
+    url = {https://CRAN.R-project.org/package=tidyr},
+  }
+  
+@book{cleveland2005benefits,
+  title={The Benefits and Costs of Good Child Care: The Economic Rationale for Public Investment in Young Children},
+  author={Cleveland, Gordon and Krashinsky, Michael},
+  year={2005},
+  publisher={Childcare Resource and Research Unit, University of Toronto}
+}
+
+@article{friendly2022affordable,
+  title={Child care affordability and accessibility: The role of the Canada-Wide Early Learning and Child Care program},
+  author={Friendly, Martha and Ballantyne, Morna},
+  journal={Canadian Public Policy},
+  volume={48},
+  number={2},
+  pages={182--197},
+  year={2022},
+  publisher={University of Toronto Press}
+}
+
+@book{salamon2002tools,
+  title={The Tools of Government: A Guide to the New Governance},
+  author={Salamon, Lester M.},
+  year={2002},
+  publisher={Oxford University Press}
+}
+
+@article{yan2011impact,
+  title={The Impact of Building Infrastructure on Child Care Accessibility and Subsidy Distribution},
+  author={Yan, Hongmei},
+  journal={Journal of Urban Policy and Management},
+  volume={34},
+  number={3},
+  pages={245--262},
+  year={2011},
+  publisher={Urban Policy Press}
+}
+
+@Article{citeglmnet,
+    title = {Elastic Net Regularization Paths for All Generalized Linear Models},
+    author = {J. Kenneth Tay and Balasubramanian Narasimhan and Trevor Hastie},
+    journal = {Journal of Statistical Software},
+    year = {2023},
+    volume = {106},
+    number = {1},
+    pages = {1--31},
+    doi = {10.18637/jss.v106.i01},
   }
